[package]
name = "cw-ica-controller"
version = "0.7.0"
authors = ["srdtrk <srdtrk@hotmail.com>"]
edition = "2021"
description = "This is a CosmWasm implementation of an ICS-27 interchain accounts controller."
repository = "https://github.com/srdtrk/cw-ica-controller"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# disable export feature to disable all instantiate/execute/query exports
default = ["export", "staking", "query"]
export = ["query", "staking"]
staking = ["cosmwasm-std/staking"]
query = ["dep:prost"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.1
"""

[dependencies]
cosmwasm-schema = "2.1"
cosmwasm-std = { version = "2.1", features = [
    "cosmwasm_1_4",
    "stargate",
] }
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = "1.0.50"
cosmos-sdk-proto = { version = "0.21.1", default-features = false, features = ["cosmwasm"] }
semver = "1.0"
cw-ownable = { version = "0.6.0", git = "https://github.com/larry0x/cw-plus-plus.git", rev = "718351d4e9d66edbf3b6dbea2d13b56ef732f51c" }
cw-ica-controller-derive = "0.4.2"
prost = { version = "0.12", optional = true }
anybuf = "0.5.0"
serde_with = "3.8.1"

[dev-dependencies]
base64 = "0.13.1"
cw-ica-controller_v0_1_3 = { package = "cw-ica-controller", version = "=0.1.3" }
cw-ica-controller_v0_2_0 = { package = "cw-ica-controller", version = "=0.2.0" }
cw-ica-controller_v0_3_0 = { package = "cw-ica-controller", version = "=0.3.0" }
cw-ica-controller_v0_4_2= { package = "cw-ica-controller", version = "=0.4.2" }
cw-ica-controller_v0_5_0 = { package = "cw-ica-controller", version = "=0.5.0" }
