[package]
name = "cw-ica-controller-derive"
authors = ["srdtrk <srdtrk@hotmail.com>"]
version = "0.1.0"
edition = "2021"
description = "This crate contains macros for deriving cw-ica-controller interfaces."
repository = "https://github.com/srdtrk/cw-ica-controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
