[package]
name = "cw-ica-owner"
version = "0.1.0"
authors = ["srdtrk <srdtrk@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.1
"""

[dependencies]
cosmwasm-schema = "2.1"
cosmwasm-std = { version = "2.1", features = [
    "cosmwasm_1_4",
] }
cw-storage-plus = "2.0"
cw2 = "2.0"
cw-ica-controller = { path = "../../..", default-features = false }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0"
thiserror = "1.0"
